--- a/source/Firebase/CrashReporting/CrashReporting.csproj
+++ b/source/Firebase/CrashReporting/CrashReporting.csproj
@@ -36,6 +36,7 @@
   
   <ItemGroup>
     <None Include="CrashReporting.targets" Pack="True" PackagePath="build/Xamarin.Firebase.iOS.CrashReporting.targets" />
+    <None Include="CrashReporting.targets" Pack="True" PackagePath="buildTransitive/Xamarin.Firebase.iOS.CrashReporting.targets" />
     <None Include="xamarin_upload_symbols.sh" Pack="True" PackagePath="content/xamarin_upload_symbols.sh" />
     <None Include="License.md" Pack="True" PackagePath="License.md" />
     <None Include="../../../icons/firebaseioscrashreporting_128x128.png" Pack="True" PackagePath="firebaseioscrashreporting_128x128.png" />
@@ -55,13 +56,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" />
+    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" PrivateAssets="None" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
-    <ProjectReference Include="..\InstanceID\InstanceID.csproj" />
-    <ProjectReference Include="..\Analytics\Analytics.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\InstanceID\InstanceID.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\Analytics\Analytics.csproj" PrivateAssets="None" />
   </ItemGroup>
   
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
