--- a/source/Google/Core/Core.csproj
+++ b/source/Google/Core/Core.csproj
@@ -36,6 +36,7 @@
   
   <ItemGroup>
     <None Include="Core.targets" Pack="True" PackagePath="build/Xamarin.Google.iOS.Core.targets" />
+    <None Include="Core.targets" Pack="True" PackagePath="buildTransitive/Xamarin.Google.iOS.Core.targets" />
     <None Include="License.md" Pack="True" PackagePath="License.md" />
     <None Include="../../../icons/googleioscore_128x128.png" Pack="True" PackagePath="googleioscore_128x128.png" />
   </ItemGroup>
@@ -54,13 +55,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" />
+    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" PrivateAssets="None" />
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\..\Firebase\Core\Core.csproj" />
-    <ProjectReference Include="..\..\Firebase\InstanceID\InstanceID.csproj" />
-    <ProjectReference Include="..\..\Firebase\Analytics\Analytics.csproj" />
+    <ProjectReference Include="..\..\Firebase\Core\Core.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\..\Firebase\InstanceID\InstanceID.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\..\Firebase\Analytics\Analytics.csproj" PrivateAssets="None" />
   </ItemGroup>
 
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
