--- a/source/Google/PlayGames/PlayGames.csproj
+++ b/source/Google/PlayGames/PlayGames.csproj
@@ -36,6 +36,7 @@
   
   <ItemGroup>
     <None Include="PlayGames.targets" Pack="True" PackagePath="build/Xamarin.Google.iOS.PlayGames.targets" />
+    <None Include="PlayGames.targets" Pack="True" PackagePath="buildTransitive/Xamarin.Google.iOS.PlayGames.targets" />
     <None Include="License.md" Pack="True" PackagePath="License.md" />
     <None Include="../../../icons/googleiosplaygames_128x128.png" Pack="True" PackagePath="googleiosplaygames_128x128.png" />
   </ItemGroup>
@@ -54,15 +55,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" />
+    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" PrivateAssets="None" />
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\..\Firebase\Core\Core.csproj" />
-    <ProjectReference Include="..\..\Firebase\InstanceID\InstanceID.csproj" />
-    <ProjectReference Include="..\..\Firebase\Analytics\Analytics.csproj" />
-    <ProjectReference Include="..\Core\Core.csproj" />
-    <ProjectReference Include="..\SignIn\SignIn.csproj" />
+    <ProjectReference Include="..\..\Firebase\Core\Core.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\..\Firebase\InstanceID\InstanceID.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\..\Firebase\Analytics\Analytics.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\Core\Core.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\SignIn\SignIn.csproj" PrivateAssets="None" />
   </ItemGroup>
 
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
