--- a/source/Firebase/MLKit.Common/MLKit.Common.csproj
+++ b/source/Firebase/MLKit.Common/MLKit.Common.csproj
@@ -36,6 +36,7 @@
   
   <ItemGroup>
     <None Include="MLKit.Common.targets" Pack="True" PackagePath="build/Xamarin.Firebase.iOS.MLKit.Common.targets" />
+    <None Include="MLKit.Common.targets" Pack="True" PackagePath="buildTransitive/Xamarin.Firebase.iOS.MLKit.Common.targets" />
     <None Include="License.md" Pack="True" PackagePath="License.md" />
     <None Include="../../../icons/firebaseiosmlkitcommon_128x128.png" Pack="True" PackagePath="firebaseiosmlkitcommon_128x128.png" />
   </ItemGroup>
@@ -54,11 +55,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" />
+    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" PrivateAssets="None" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" PrivateAssets="None" />
   </ItemGroup>
   
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
