--- a/source/Firebase/MLKit.ModelInterpreter/MLKit.ModelInterpreter.csproj
+++ b/source/Firebase/MLKit.ModelInterpreter/MLKit.ModelInterpreter.csproj
@@ -36,6 +36,7 @@
   
   <ItemGroup>
     <None Include="MLKit.ModelInterpreter.targets" Pack="True" PackagePath="build/Xamarin.Firebase.iOS.MLKit.ModelInterpreter.targets" />
+    <None Include="MLKit.ModelInterpreter.targets" Pack="True" PackagePath="buildTransitive/Xamarin.Firebase.iOS.MLKit.ModelInterpreter.targets" />
     <None Include="License.md" Pack="True" PackagePath="License.md" />
     <None Include="../../../icons/firebaseiosmlkitmodelinterpreter_128x128.png" Pack="True" PackagePath="firebaseiosmlkitmodelinterpreter_128x128.png" />
   </ItemGroup>
@@ -54,13 +55,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" />
+    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" PrivateAssets="None" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
-    <ProjectReference Include="..\InstanceID\InstanceID.csproj" />
-    <ProjectReference Include="..\MLKit.Common\MLKit.Common.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\InstanceID\InstanceID.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\MLKit.Common\MLKit.Common.csproj" PrivateAssets="None" />
   </ItemGroup>
   
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
