--- a/source/Google/AppIndexing/AppIndexing.csproj
+++ b/source/Google/AppIndexing/AppIndexing.csproj
@@ -36,6 +36,7 @@
   
   <ItemGroup>
     <None Include="AppIndexing.targets" Pack="True" PackagePath="build/Xamarin.Google.iOS.AppIndexing.targets" />
+    <None Include="AppIndexing.targets" Pack="True" PackagePath="buildTransitive/Xamarin.Google.iOS.AppIndexing.targets" />
     <None Include="License.md" Pack="True" PackagePath="License.md" />
     <None Include="../../../icons/googleiosappindexing_128x128.png" Pack="True" PackagePath="googleiosappindexing_128x128.png" />
   </ItemGroup>
@@ -54,7 +55,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" />
+    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" PrivateAssets="None" />
   </ItemGroup>
   
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
