--- a/source/Google/AppInvite/AppInvite.csproj
+++ b/source/Google/AppInvite/AppInvite.csproj
@@ -36,6 +36,7 @@
   
   <ItemGroup>
     <None Include="AppInvite.targets" Pack="True" PackagePath="build/Xamarin.Google.iOS.AppInvite.targets" />
+    <None Include="AppInvite.targets" Pack="True" PackagePath="buildTransitive/Xamarin.Google.iOS.AppInvite.targets" />
     <None Include="License.md" Pack="True" PackagePath="License.md" />
     <None Include="../../../icons/googleiosappinvite_128x128.png" Pack="True" PackagePath="googleiosappinvite_128x128.png" />
   </ItemGroup>
@@ -54,12 +55,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" />
+    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" PrivateAssets="None" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
-    <ProjectReference Include="..\SignIn\SignIn.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\SignIn\SignIn.csproj" PrivateAssets="None" />
   </ItemGroup>
   
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
