--- a/source/Google/GoogleCloudMessaging/GoogleCloudMessaging.csproj
+++ b/source/Google/GoogleCloudMessaging/GoogleCloudMessaging.csproj
@@ -36,6 +36,7 @@
   
   <ItemGroup>
     <None Include="GoogleCloudMessaging.targets" Pack="True" PackagePath="build/Xamarin.Google.iOS.GoogleCloudMessaging.targets" />
+    <None Include="GoogleCloudMessaging.targets" Pack="True" PackagePath="buildTransitive/Xamarin.Google.iOS.GoogleCloudMessaging.targets" />
     <None Include="License.md" Pack="True" PackagePath="License.md" />
     <None Include="../../../icons/googleiosgcm_128x128.png" Pack="True" PackagePath="googleiosgcm_128x128.png" />
   </ItemGroup>
@@ -54,12 +55,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" />
+    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" PrivateAssets="None" />
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
-    <ProjectReference Include="..\InstanceID\InstanceID.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" PrivateAssets="None" />
+    <ProjectReference Include="..\InstanceID\InstanceID.csproj" PrivateAssets="None" />
   </ItemGroup>
 
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
