--- a/source/Google/Maps/Maps.csproj
+++ b/source/Google/Maps/Maps.csproj
@@ -36,6 +36,7 @@
   
   <ItemGroup>
     <None Include="Maps.targets" Pack="True" PackagePath="build/Xamarin.Google.iOS.Maps.targets" />
+    <None Include="Maps.targets" Pack="True" PackagePath="buildTransitive/Xamarin.Google.iOS.Maps.targets" />
     <None Include="License.md" Pack="True" PackagePath="License.md" />
     <None Include="../../../icons/googleiosmaps_128x128.png" Pack="True" PackagePath="googleiosmaps_128x128.png" />
   </ItemGroup>
@@ -56,7 +57,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" />
+    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" PrivateAssets="None" />
   </ItemGroup>
   
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
