--- a/source/Google/SignIn/SignIn.csproj
+++ b/source/Google/SignIn/SignIn.csproj
@@ -36,6 +36,7 @@
   
   <ItemGroup>
     <None Include="SignIn.targets" Pack="True" PackagePath="build/Xamarin.Google.iOS.SignIn.targets" />
+    <None Include="SignIn.targets" Pack="True" PackagePath="buildTransitive/Xamarin.Google.iOS.SignIn.targets" />
     <None Include="External-Dependency-Info.txt" Pack="True" PackagePath="THIRD-PARTY-NOTICES.txt" />
     <None Include="License.md" Pack="True" PackagePath="License.md" />
     <None Include="../../../icons/googleiossignin_128x128.png" Pack="True" PackagePath="googleiossignin_128x128.png" />
@@ -78,11 +79,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" />
+    <PackageReference Include="Xamarin.Build.Download" Version="0.4.11" PrivateAssets="None" />
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\..\Firebase\Core\Core.csproj" />
+    <ProjectReference Include="..\..\Firebase\Core\Core.csproj" PrivateAssets="None" />
   </ItemGroup>
 
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
