--- a/source/Firebase/Core/Core.csproj
+++ b/source/Firebase/Core/Core.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>Firebase.Core</RootNamespace>
     <AssemblyName>Firebase.Core</AssemblyName>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>6.1.0.1</FileVersion>
+    <FileVersion>6.6.0</FileVersion>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
@@ -23,7 +23,7 @@
     <PackageProjectUrl>https://go.microsoft.com/fwlink/?linkid=2007321</PackageProjectUrl>
     <PackageLicenseFile>License.md</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageVersion>6.1.0.1</PackageVersion>
+    <PackageVersion>6.6.0</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -38,8 +38,23 @@
     <None Include="..\..\..\externals\FirebaseCore.framework\FirebaseCore">
       <Link>FirebaseCore.framework</Link>
     </None>
+    <None Include="..\..\..\externals\FirebaseCoreDiagnostics.framework\FirebaseCoreDiagnostics">
+      <Link>FirebaseCoreDiagnostics.framework</Link>
+    </None>
+    <None Include="..\..\..\externals\GoogleAPIClientForREST.framework\GoogleAPIClientForREST">
+      <Link>GoogleAPIClientForREST.framework</Link>
+    </None>
+    <None Include="..\..\..\externals\GoogleDataTransport.framework\GoogleDataTransport">
+      <Link>GoogleDataTransport.framework</Link>
+    </None>
+    <None Include="..\..\..\externals\GoogleDataTransportCCTSupport.framework\GoogleDataTransportCCTSupport">
+      <Link>GoogleDataTransportCCTSupport.framework</Link>
+    </None>
     <None Include="..\..\..\externals\GoogleToolboxForMac.framework\GoogleToolboxForMac">
       <Link>GoogleToolboxForMac.framework</Link>
+    </None>
+    <None Include="..\..\..\externals\GoogleUtilities.framework\GoogleUtilities">
+      <Link>GoogleUtilities.framework</Link>
     </None>
     <None Include="..\..\..\externals\GTMSessionFetcher.framework\GTMSessionFetcher">
       <Link>GTMSessionFetcher.framework</Link>
@@ -53,12 +68,6 @@
     <None Include="..\..\..\externals\Protobuf.framework\Protobuf">
       <Link>Protobuf.framework</Link>
     </None>
-    <None Include="..\..\..\externals\GoogleUtilities.framework\GoogleUtilities">
-      <Link>GoogleUtilities.framework</Link>
-    </None>
-    <None Include="..\..\..\externals\GoogleAPIClientForREST.framework\GoogleAPIClientForREST">
-      <Link>GoogleAPIClientForREST.framework</Link>
-    </None>
     <None Include="Core.targets" Pack="True" PackagePath="build/Xamarin.Firebase.iOS.Core.targets" />
     <None Include="Core.targets" Pack="True" PackagePath="buildTransitive/Xamarin.Firebase.iOS.Core.targets" />
     <None Include="External-Dependency-Info.txt" Pack="True" PackagePath="THIRD-PARTY-NOTICES.txt" />
@@ -69,40 +78,65 @@
   <ItemGroup>
     <NativeReference Include="..\..\..\externals\FirebaseCore.framework">
       <Kind>Framework</Kind>
+      <SmartLink>True</SmartLink>
+      <ForceLoad>True</ForceLoad>
+      <Frameworks>Foundation UIKit</Frameworks>
+    </NativeReference>
+    <NativeReference Include="..\..\..\externals\FirebaseCoreDiagnostics.framework">
+      <Kind>Framework</Kind>
+      <SmartLink>True</SmartLink>
       <ForceLoad>True</ForceLoad>
       <Frameworks>Foundation</Frameworks>
     </NativeReference>
-    <NativeReference Include="..\..\..\externals\GoogleToolboxForMac.framework">
+    <NativeReference Include="..\..\..\externals\GoogleAPIClientForREST.framework">
       <Kind>Framework</Kind>
-      <Frameworks>SystemConfiguration</Frameworks>
+      <SmartLink>True</SmartLink>
+      <ForceLoad>True</ForceLoad>
+    </NativeReference>
+    <NativeReference Include="..\..\..\externals\GoogleDataTransport.framework">
+      <Kind>Framework</Kind>
+      <SmartLink>True</SmartLink>
+      <ForceLoad>True</ForceLoad>
+    </NativeReference>
+    <NativeReference Include="..\..\..\externals\GoogleDataTransportCCTSupport.framework">
+      <Kind>Framework</Kind>
+      <SmartLink>True</SmartLink>
       <ForceLoad>True</ForceLoad>
       <LinkerFlags>-lz</LinkerFlags>
     </NativeReference>
-    <NativeReference Include="..\..\..\externals\GTMSessionFetcher.framework">
+    <NativeReference Include="..\..\..\externals\GoogleToolboxForMac.framework">
       <Kind>Framework</Kind>
-      <Frameworks>Security</Frameworks>
+      <SmartLink>True</SmartLink>
       <ForceLoad>True</ForceLoad>
-    </NativeReference>
-    <NativeReference Include="..\..\..\externals\leveldb.framework">
-      <Kind>Framework</Kind>
-      <ForceLoad>True</ForceLoad>
-    </NativeReference>
-    <NativeReference Include="..\..\..\externals\nanopb.framework">
-      <Kind>Framework</Kind>
-      <ForceLoad>True</ForceLoad>
-    </NativeReference>
-    <NativeReference Include="..\..\..\externals\Protobuf.framework">
-      <Kind>Framework</Kind>
-      <ForceLoad>True</ForceLoad>
+      <LinkerFlags>-lz</LinkerFlags>
+      <Frameworks>SystemConfiguration</Frameworks>
     </NativeReference>
     <NativeReference Include="..\..\..\externals\GoogleUtilities.framework">
       <Kind>Framework</Kind>
+      <SmartLink>True</SmartLink>
       <ForceLoad>True</ForceLoad>
       <LinkerFlags>-ObjC -lz</LinkerFlags>
       <Frameworks>Security SystemConfiguration</Frameworks>
     </NativeReference>
-	  <NativeReference Include="..\..\..\externals\GoogleAPIClientForREST.framework">
+    <NativeReference Include="..\..\..\externals\GTMSessionFetcher.framework">
       <Kind>Framework</Kind>
+      <Frameworks>Security</Frameworks>
+      <SmartLink>True</SmartLink>
+      <ForceLoad>True</ForceLoad>
+    </NativeReference>
+    <NativeReference Include="..\..\..\externals\leveldb.framework">
+      <Kind>Framework</Kind>
+      <SmartLink>True</SmartLink>
+      <ForceLoad>True</ForceLoad>
+    </NativeReference>
+    <NativeReference Include="..\..\..\externals\nanopb.framework">
+      <Kind>Framework</Kind>
+      <SmartLink>True</SmartLink>
+      <ForceLoad>True</ForceLoad>
+    </NativeReference>
+    <NativeReference Include="..\..\..\externals\Protobuf.framework">
+      <Kind>Framework</Kind>
+      <SmartLink>True</SmartLink>
       <ForceLoad>True</ForceLoad>
     </NativeReference>
   </ItemGroup>
