--- a/source/Firebase/Core/Core.targets
+++ b/source/Firebase/Core/Core.targets
@@ -14,6 +14,7 @@
 		</XamarinBuildDownload>
 		<NativeReference Include="$(_GoogleAppMeasurementSDKBaseFolder)GoogleAppMeasurement.framework">
 			<Kind>Framework</Kind>
+			<SmartLink>True</SmartLink>
 			<ForceLoad>True</ForceLoad>
 			<LinkerFlags>-ObjC -lc++ -lsqlite3 -lz</LinkerFlags>
 			<Frameworks>Security StoreKit SystemConfiguration UIKit</Frameworks>
