--- a/source/Firebase/Analytics/Analytics.targets
+++ b/source/Firebase/Analytics/Analytics.targets
@@ -3,27 +3,25 @@
 
 	<PropertyGroup>
 		<_FirebaseAnalyticsAssemblyName>Firebase.Analytics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseAnalyticsAssemblyName>
-		<_FirebaseAnalyticsItemsFolder>FAnlytcs-6.0.4</_FirebaseAnalyticsItemsFolder>
+		<_FirebaseAnalyticsItemsFolder>FAnlytcs-6.2.1</_FirebaseAnalyticsItemsFolder>
 		<_FirebaseAnalyticsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseAnalyticsItemsFolder)\Frameworks\</_FirebaseAnalyticsSDKBaseFolder>
 	</PropertyGroup>
 
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseAnalyticsItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/2717022184840456/FirebaseAnalytics-6.0.4.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/76e382321cdb1030/FirebaseAnalytics-6.2.1.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<NativeReference Include="$(_FirebaseAnalyticsSDKBaseFolder)FirebaseAnalytics.framework">
 			<Kind>Framework</Kind>
+			<SmartLink>True</SmartLink>
 			<ForceLoad>True</ForceLoad>
 			<LinkerFlags>-ObjC -lc++ -lsqlite3 -lz</LinkerFlags>
 			<Frameworks>AddressBook AdSupport CoreGraphics StoreKit SystemConfiguration</Frameworks>
 		</NativeReference>
-		<NativeReference Include="$(_FirebaseAnalyticsSDKBaseFolder)FirebaseCoreDiagnostics.framework">
-			<Kind>Framework</Kind>
-			<ForceLoad>True</ForceLoad>
-		</NativeReference>
 		<NativeReference Include="$(_FirebaseAnalyticsSDKBaseFolder)FIRAnalyticsConnector.framework">
 			<Kind>Framework</Kind>
+			<SmartLink>True</SmartLink>
 			<ForceLoad>True</ForceLoad>
 		</NativeReference>
 	</ItemGroup>
