--- a/source/Google/SignIn/SignIn.targets
+++ b/source/Google/SignIn/SignIn.targets
@@ -2,16 +2,17 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_GoogleSignInAssemblyName>Google.SignIn, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleSignInAssemblyName>
-		<_GoogleSignInItemsFolder>GSgnI-5.0.1</_GoogleSignInItemsFolder>
+		<_GoogleSignInItemsFolder>GSgnI-5.0.2</_GoogleSignInItemsFolder>
 		<_GoogleSignInSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleSignInItemsFolder)\</_GoogleSignInSDKBaseFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_GoogleSignInItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/fd4c1a60ce184799/GoogleSignIn-5.0.1.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/4d5ad0c02cd38abf/GoogleSignIn-5.0.2.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<NativeReference Include="$(_GoogleSignInSDKBaseFolder)Frameworks\GoogleSignIn.framework">
 			<Kind>Framework</Kind>
+			<SmartLink>True</SmartLink>
 			<ForceLoad>True</ForceLoad>
 			<LinkerFlags>-ObjC -lsqlite3</LinkerFlags>
 			<Frameworks>CoreGraphics CoreText Foundation LocalAuthentication SystemConfiguration UIKit</Frameworks>
