Added areaPath to azure-pipelines.yml

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,7 @@ jobs:
   - template: .ci/build.yml@components
     parameters:
       timeoutInMinutes: 180
+      areaPath: 'DevDiv\Xamarin SDK\iOS and Mac'
       cakeTarget: 'build'
       cakeExtraArgs: '--names=$(SdksNames)'
       windowsImage: ''
