--- a/source/Google/Maps/Maps.targets
+++ b/source/Google/Maps/Maps.targets
@@ -3,14 +3,14 @@
 
 	<PropertyGroup>
 		<_GoogleMapsAssemblyName>Google.Maps, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleMapsAssemblyName>
-		<_GoogleMapsItemsFolder>GMps-3.5.0</_GoogleMapsItemsFolder>
+		<_GoogleMapsItemsFolder>GMps-3.7.0</_GoogleMapsItemsFolder>
 		<_GoogleMapsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleMapsItemsFolder)\Maps\Frameworks\</_GoogleMapsSDKBaseFolder>
 		<_GoogleMapsBaseSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleMapsItemsFolder)\Base\Frameworks\</_GoogleMapsBaseSDKBaseFolder>
 	</PropertyGroup>
 
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_GoogleMapsItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/828459b9d7d1bde9/GoogleMaps-3.5.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/f5a3789e77faee18/GoogleMaps-3.7.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<NativeReference Include="$(_GoogleMapsSDKBaseFolder)GoogleMaps.framework">
@@ -97,10 +97,6 @@
 			</RestoreAssemblyResource>
 			<RestoreAssemblyResource Include="$(_GoogleMapsSDKBaseFolder)GoogleMaps.framework\Resources\GoogleMaps.bundle\GMSCacheStorage.momd\StorageWithTileProto.mom">
 				<LogicalName>__monotouch_content_GoogleMaps.bundle_fGMSCacheStorage.momd_fStorageWithTileProto.mom</LogicalName>
-				<AssemblyName>$(_GoogleMapsAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_GoogleMapsSDKBaseFolder)GoogleMaps.framework\Resources\GoogleMaps.bundle\GMSCacheStorage.momd\StorageWithTileProto.omo">
-				<LogicalName>__monotouch_content_GoogleMaps.bundle_fGMSCacheStorage.momd_fStorageWithTileProto.omo</LogicalName>
 				<AssemblyName>$(_GoogleMapsAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
 			<RestoreAssemblyResource Include="$(_GoogleMapsSDKBaseFolder)GoogleMaps.framework\Resources\GoogleMaps.bundle\GMSCacheStorage.momd\StorageWithTileVersionID.mom">
@@ -201,6 +197,18 @@
 			</RestoreAssemblyResource>
 			<RestoreAssemblyResource Include="$(_GoogleMapsSDKBaseFolder)GoogleMaps.framework\Resources\GoogleMaps.bundle\GMSCoreResources.bundle\dav_one_way_16_256.png">
 				<LogicalName>__monotouch_content_GoogleMaps.bundle_fGMSCoreResources.bundle_fdav__one__way__16__256.png</LogicalName>
+				<AssemblyName>$(_GoogleMapsAssemblyName)</AssemblyName>
+			</RestoreAssemblyResource>
+			<RestoreAssemblyResource Include="$(_GoogleMapsSDKBaseFolder)GoogleMaps.framework\Resources\GoogleMaps.bundle\GMSCoreResources.bundle\ic_compass_needle_32pt.png">
+				<LogicalName>__monotouch_content_GoogleMaps.bundle_fGMSCoreResources.bundle_fic__compass__needle__32pt.png</LogicalName>
+				<AssemblyName>$(_GoogleMapsAssemblyName)</AssemblyName>
+			</RestoreAssemblyResource>
+			<RestoreAssemblyResource Include="$(_GoogleMapsSDKBaseFolder)GoogleMaps.framework\Resources\GoogleMaps.bundle\GMSCoreResources.bundle\ic_compass_needle_32pt%402x.png">
+				<LogicalName>__monotouch_content_GoogleMaps.bundle_fGMSCoreResources.bundle_fic__compass__needle__32pt%402x.png</LogicalName>
+				<AssemblyName>$(_GoogleMapsAssemblyName)</AssemblyName>
+			</RestoreAssemblyResource>
+			<RestoreAssemblyResource Include="$(_GoogleMapsSDKBaseFolder)GoogleMaps.framework\Resources\GoogleMaps.bundle\GMSCoreResources.bundle\ic_compass_needle_32pt%403x.png">
+				<LogicalName>__monotouch_content_GoogleMaps.bundle_fGMSCoreResources.bundle_fic__compass__needle__32pt%403x.png</LogicalName>
 				<AssemblyName>$(_GoogleMapsAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
 			<RestoreAssemblyResource Include="$(_GoogleMapsSDKBaseFolder)GoogleMaps.framework\Resources\GoogleMaps.bundle\GMSCoreResources.bundle\ic_compass_needle.png">
