--- a/source/Firebase/RemoteConfig/RemoteConfig.csproj
+++ b/source/Firebase/RemoteConfig/RemoteConfig.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>Firebase.RemoteConfig</RootNamespace>
     <AssemblyName>Firebase.RemoteConfig</AssemblyName>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>4.2.1.1</FileVersion>
+    <FileVersion>4.4.6</FileVersion>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
@@ -23,7 +23,7 @@
     <PackageProjectUrl>https://go.microsoft.com/fwlink/?linkid=865532</PackageProjectUrl>
     <PackageLicenseFile>License.md</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageVersion>4.2.1.1</PackageVersion>
+    <PackageVersion>4.4.6</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -35,10 +35,22 @@
   </ItemGroup>
   
   <ItemGroup>
-    <None Include="RemoteConfig.targets" Pack="True" PackagePath="build/Xamarin.Firebase.iOS.RemoteConfig.targets" />
-    <None Include="RemoteConfig.targets" Pack="True" PackagePath="buildTransitive/Xamarin.Firebase.iOS.RemoteConfig.targets" />
+    <None Include="..\..\..\externals\FirebaseRemoteConfig.framework\FirebaseRemoteConfig">
+      <Link>FirebaseRemoteConfig.framework</Link>
+    </None>
+    <None Include="External-Dependency-Info.txt" Pack="True" PackagePath="THIRD-PARTY-NOTICES.txt" />
     <None Include="License.md" Pack="True" PackagePath="License.md" />
     <None Include="../../../icons/firebaseiosremoteconfig_128x128.png" Pack="True" PackagePath="firebaseiosremoteconfig_128x128.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <NativeReference Include="..\..\..\externals\FirebaseRemoteConfig.framework">
+      <Kind>Framework</Kind>
+			<SmartLink>True</SmartLink>
+			<ForceLoad>True</ForceLoad>
+			<LinkerFlags>-ObjC -lsqlite3 -lz</LinkerFlags>
+			<Frameworks>Security StoreKit SystemConfiguration</Frameworks>
+    </NativeReference>
   </ItemGroup>
 
   <ItemGroup>
